Add versions to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-tqdm
-numpy
-torch
-wandb
-transformers
-requests
+tqdm==4.62.3
+numpy==1.19.5
+torch==1.9.1
+wandb==0.12.6
+transformers==4.10.2
+tokenizers==0.10.3
+requests==2.26.0
 googletrans==4.0.0rc1
-transformers
-protobuf
-ipython
-pandas
-easynmt
-scipy
-networkx
+protobuf==3.18.0
+pandas==1.1.5
+EasyNMT==2.0.1
+scipy==1.5.4
+networkx==2.5.1
+nltk==3.6.3
