--- a/dataset/crowdsourcing/requirements.txt
+++ b/dataset/crowdsourcing/requirements.txt
@@ -1,5 +1,5 @@
-gspread
-oauth2client
-plotly
-seaborn
-matplotlib
+gspread==4.0.1
+oauth2client==4.1.3
+plotly==5.3.1
+seaborn==0.11.2
+matplotlib==3.3.4
